--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,35 +30,9 @@
 </head>
 <body>
 
-<img src="logo.png" alt="">
-
 <div class="container" style="margin-left: 40px; margin-bottom: 30px;">
-    <h4>Users Table</h4>
-    <p>{{.Title}}</p>
-    <p>{{.Message}}</p>
+    <h4>Hello World</h4>
+ </div>
 
-</div>
-
-
-
-<table style="margin-left: 40px;">
-<thead>
-    <th>Sno</th>
-    <th>Username</th>
-    <th>Actions</th>
-</thead>
-    <tbody>
-    {{range .Clients}}
-    <tr>
-        <td>{{.Id}}</td>
-        <td>{{.MobileNumber}}</td>
-        <td>
-            <a href="">Delete</a>
-            <a href="">Edit</a>
-        </td>
-    </tr>
-    {{end}}
-    </tbody>
-</table>
 </body>
 </html>
